--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinite Scroll</title>
     <link rel="icon" type="img/png" href="https://www.google.com/s2/favicons?domain=jacinto.design">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello World !</h1>
+    <!-- Title -->
+    <h1>Unspalsh API - Infinite Scroll</h1>
+
+    <!-- Loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="img/Pulse-1s-150px.svg" alt="Loading">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
