--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <div class="loader" id="loader" hidden>
         <img src="img/Pulse-1s-150px.svg" alt="Loading">
     </div>
+
+    <!-- IMage conatiner -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1555367832-f5efe20f1d5b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1555367832-f5efe20f1d5b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1555367832-f5efe20f1d5b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
