implementing infinscroll & setting up the loader on first load

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Unspalsh API - Infinite Scroll</h1>
 
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="img/Pulse-1s-150px.svg" alt="Loading">
     </div>
 
